<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primer"
    tools:context=".museumlist">


    <LinearLayout
        android:id="@+id/toppanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Primer"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backtohome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:src="@drawable/backbutton"
            android:tint="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/segoeuib"
            android:text="Menu Museum"
            android:textAlignment="center"
            android:textSize="21sp" />

        <ImageButton
            android:id="@+id/searchicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/searchicon"
            android:tint="@color/Black" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/Primer"
                android:elevation="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="37dp"
                    android:layout_marginRight="37dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="45dp"
                        android:fontFamily="@font/seguibl"
                        android:lineHeight="28sp"
                        android:text="@string/pilihmuseumsuka"
                        android:textAlignment="center"
                        android:textSize="21sp" />

                    <ImageButton
                        android:id="@+id/louvre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:elevation="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/list1" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:elevation="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/listx" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:elevation="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/listx" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:elevation="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/listx" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/segoeui"
                        android:text="@string/pilihanrequest"
                        android:textAlignment="center"
                        android:textColor="@color/BlackLight"
                        android:textSize="14dp" />

                    <Button
                        android:id="@+id/museumrequest"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginBottom="70dp"
                        android:background="@drawable/roundrectangle"
                        android:elevation="10dp"
                        android:fontFamily="@font/seguibl"
                        android:letterSpacing="0"
                        android:text="@string/request"
                        android:textColor="@color/BlackLight"
                        android:textSize="19sp" />


                    <!--            <TextView-->
                    <!--                android:layout_width="match_parent"-->
                    <!--                android:layout_height="26dp"-->
                    <!--                android:elevation="10dp"-->
                    <!--                android:src="@color/Primer" />-->

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00B0FF"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/round"
                    app:backgroundTint="@color/Aksen"
                    android:tint="@color/Primer"
                    android:layout_marginTop="50dp"
                    android:elevation="10dp"
                    android:src="@drawable/ic_coffeeicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp"
                    android:fontFamily="@font/segoeui"
                    android:gravity="center_horizontal"
                    android:textColor="@color/Primer"
                    android:text="@string/kopi"
                    android:textAlignment="center"
                    android:outlineAmbientShadowColor="@color/BlackLight"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>